
* SOLR-15486: During node shutdown pausing of updates and waiting for in-flight update requests to finish
  before closing cores is no longer SolrCloud specific. (Christine Poerschke, David Smiley)

* SOLR-15599: woodstox-core-asl:4.4.1 (org.codehaus) replaced with woodstox-core:6.2.4 (com.fasterxml) (Houston Putman)

==================  8.9.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-14330: ExpandComponent now supports an expand.nullGroup=true option (hossman)

* SOLR-15150: New update.partial.requireInPlace=true option to prevent any partial document updates that can't be done In-Place (hossman)

* SOLR-15087: SolrCloud backups can now be restored to compatible existing collections, instead of requiring a new collection
  for each restore. (Jason Gerlowski, shalin, Cao Manh Dat)

* SOLR-15132: Add temporal graph query to the nodes Streaming Expression (Joel Bernstein)

* SOLR-15365: Improved Grafana dashboard for Prometheus Exporter with new Solr Cluster row (janhoy)

* SOLR-15300: Report collection and shard "health" state in CLUSTERSTATUS response. (ab, janhoy)

* SOLR-15397: Expose zookeeper status in the Prometheus exporter (janhoy)

* SOLR-15090: A new 'gcs-repository' contrib can be used to store and retrieve backups from Google Cloud Storage. (Jason Gerlowski, Shalin Mangar, Cao Manh Dat)

* SOLR-12697: In contrib/ltr FieldValueFeature support "stored=false docValues=true" a.k.a. pure DocValues fields.
  (Stanislav Livotov, Erick Erickson, Tobias Kässmann, Tom Gilke, Christine Poerschke)

Improvements
---------------------
* SOLR-15081: Metrics for a core: add SolrCloud "isLeader" and "replicaState".  (David Smiley)

* SOLR-15085: Prevent EmbeddedSolrServer calling shutdown on a CoreContainer that was passed to it. (Tim Owen via Mike Drob)

* SOLR-14234: Unhelpful message in RemoteExecutionException. (ab)
