@@ -55,46 +55,46 @@ limitations under the License.
   <link rel="stylesheet" type="text/css" href="css/angular/jstree.style.min.css?_=${version}">
 
   <meta http-equiv="x-ua-compatible" content="IE=9">
-  <script src="libs/jquery-3.5.1.min.js"></script>
-  <script src="libs/chosen.jquery.min.js"></script>
-  <script src="libs/jstree.min.js"></script>
-  <script src="libs/angular.min.js"></script>
-  <script src="libs/angular-chosen.min.js"></script>
-  <script src="libs/angular-resource.min.js"></script>
-  <script src="libs/angular-route.min.js"></script>
-  <script src="libs/angular-cookies.min.js"></script>
-  <script src="libs/ngtimeago.js"></script>
-  <script src="libs/highlight.js"></script>
-  <script src="libs/d3.js"></script>
-  <script src="libs/jquery-ui.min.js"></script>
-  <script src="libs/angular-utf8-base64.min.js"></script>
-  <script src="js/angular/app.js"></script>
-  <script src="js/angular/services.js"></script>
-  <script src="js/angular/controllers/index.js"></script>
-  <script src="js/angular/controllers/login.js"></script>
-  <script src="js/angular/controllers/logging.js"></script>
-  <script src="js/angular/controllers/cloud.js"></script>
-  <script src="js/angular/controllers/collections.js"></script>
-  <script src="js/angular/controllers/cores.js"></script>
-  <script src="js/angular/controllers/threads.js"></script>
-  <script src="js/angular/controllers/java-properties.js"></script>
-  <script src="js/angular/controllers/alias-overview.js"></script>
-  <script src="js/angular/controllers/core-overview.js"></script>
-  <script src="js/angular/controllers/collection-overview.js"></script>
-  <script src="js/angular/controllers/analysis.js"></script>
-  <script src="js/angular/controllers/dataimport.js"></script>
-  <script src="js/angular/controllers/documents.js"></script>
-  <script src="js/angular/controllers/files.js"></script>
-  <script src="js/angular/controllers/query.js"></script>
-  <script src="js/angular/controllers/stream.js"></script>
-  <script src="js/angular/controllers/plugins.js"></script>
-  <script src="js/angular/controllers/replication.js"></script>
-  <script src="js/angular/controllers/schema.js"></script>
-  <script src="js/angular/controllers/schema-designer.js"></script>
-  <script src="js/angular/controllers/security.js"></script>
-  <script src="js/angular/controllers/segments.js"></script>
-  <script src="js/angular/controllers/unknown.js"></script>
-  <script src="js/angular/controllers/cluster-suggestions.js"></script>
+  <script src="libs/jquery-3.5.1.min.js?_=${version}"></script>
+  <script src="libs/chosen.jquery.min.js?_=${version}"></script>
+  <script src="libs/jstree.min.js?_=${version}"></script>
+  <script src="libs/angular.min.js?_=${version}"></script>
+  <script src="libs/angular-chosen.min.js?_=${version}"></script>
+  <script src="libs/angular-resource.min.js?_=${version}"></script>
+  <script src="libs/angular-route.min.js?_=${version}"></script>
+  <script src="libs/angular-cookies.min.js?_=${version}"></script>
+  <script src="libs/ngtimeago.js?_=${version}"></script>
+  <script src="libs/highlight.js?_=${version}"></script>
+  <script src="libs/d3.js?_=${version}"></script>
+  <script src="libs/jquery-ui.min.js?_=${version}"></script>
+  <script src="libs/angular-utf8-base64.min.js?_=${version}"></script>
+  <script src="js/angular/app.js?_=${version}"></script>
+  <script src="js/angular/services.js?_=${version}"></script>
+  <script src="js/angular/controllers/index.js?_=${version}"></script>
+  <script src="js/angular/controllers/login.js?_=${version}"></script>
+  <script src="js/angular/controllers/logging.js?_=${version}"></script>
+  <script src="js/angular/controllers/cloud.js?_=${version}"></script>
+  <script src="js/angular/controllers/collections.js?_=${version}"></script>
+  <script src="js/angular/controllers/cores.js?_=${version}"></script>
+  <script src="js/angular/controllers/threads.js?_=${version}"></script>
+  <script src="js/angular/controllers/java-properties.js?_=${version}"></script>
+  <script src="js/angular/controllers/alias-overview.js?_=${version}"></script>
+  <script src="js/angular/controllers/core-overview.js?_=${version}"></script>
+  <script src="js/angular/controllers/collection-overview.js?_=${version}"></script>
+  <script src="js/angular/controllers/analysis.js?_=${version}"></script>
+  <script src="js/angular/controllers/dataimport.js?_=${version}"></script>
+  <script src="js/angular/controllers/documents.js?_=${version}"></script>
+  <script src="js/angular/controllers/files.js?_=${version}"></script>
+  <script src="js/angular/controllers/query.js?_=${version}"></script>
+  <script src="js/angular/controllers/stream.js?_=${version}"></script>
+  <script src="js/angular/controllers/plugins.js?_=${version}"></script>
+  <script src="js/angular/controllers/replication.js?_=${version}"></script>
+  <script src="js/angular/controllers/schema.js?_=${version}"></script>
+  <script src="js/angular/controllers/schema-designer.js?_=${version}"></script>
+  <script src="js/angular/controllers/security.js?_=${version}"></script>
+  <script src="js/angular/controllers/segments.js?_=${version}"></script>
+  <script src="js/angular/controllers/unknown.js?_=${version}"></script>
+  <script src="js/angular/controllers/cluster-suggestions.js?_=${version}"></script>
 
 
 </head>
